--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,158 +6,75 @@
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="vertical"
-        android:visibility="visible"
-        >
+        tools:context=".MainActivity">
+
+    <!-- Nadpis -->
+    <TextView
+            android:id="@+id/textViewHeader"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Choose your game!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textAlignment="center"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- ScrollView pre všetky karty -->
 
     <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/scrollView"
-            >
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewHeader"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
+                android:id="@+id/linearLayoutStatic"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/linearLayoutScroll">
+                android:paddingBottom="16dp">
 
-            <TextView
-                    android:text="Vyber si hru!"
-                    android:layout_width="match_parent"
+            <!-- Posledná karta s tlačidlom na pridanie -->
+            <androidx.cardview.widget.CardView
+                    android:id="@+id/buttonCard"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textViewHeader"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    android:textAlignment="center"/>
-
-            <androidx.cardview.widget.CardView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
-                    android:id="@+id/cardView1"
-                    android:layout_marginTop="30dp"
-                    android:layout_gravity="center">
-
-                <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/linearLayout1"
-                        android:gravity="center">
-
-                    <TextView
-                            android:text="Scrabble"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/textView1"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textAlignment="center"/>
-
-                    <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:srcCompat="@android:drawable/ic_media_play"
-                            android:id="@+id/imageButton1"
-                            />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
-                    android:id="@+id/cardView2"
-                    android:layout_marginTop="30dp"
-                    android:layout_gravity="center">
-
-                <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/linearLayout2"
-                        android:gravity="center">
-
-                    <TextView
-                            android:text="Zelená planéta"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textAlignment="center"
-                            android:id="@+id/textView2"/>
-
-                    <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:srcCompat="@android:drawable/ic_media_play"
-                            android:id="@+id/imageButton2"
-                            />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
-                    android:id="@+id/cardView3"
-                    android:layout_marginTop="30dp"
-                    android:layout_gravity="center">
-
-                <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/linearLayout3"
-                        android:gravity="center">
-
-                    <TextView
-                            android:text="Paleoindiáni"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/textView3"
-                            android:textAlignment="center"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
-
-                    <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:srcCompat="@android:drawable/ic_media_play"
-                            android:id="@+id/imageButton3"/>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
-                    android:id="@+id/cardView4"
                     android:layout_gravity="center"
-                    android:layout_marginTop="100dp">
+                    android:layout_marginTop="16dp"
+                    app:cardElevation="4dp"
+                    app:cardCornerRadius="8dp">
 
                 <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/linearLayout4">
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="16dp">
 
                     <TextView
-                            android:text="Ďalšia hra"
+                            android:text="Add Game"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/textView4"
+                            android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                            android:textAlignment="center"/>
+                            android:layout_marginBottom="8dp"/>
 
-                    <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:srcCompat="@android:drawable/ic_media_play"
-                            android:id="@+id/imageButton4"/>
-
+                    <Button
+                            android:id="@+id/button"
+                            android:text="+"
+                            android:textSize="24sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textColor="#FFFFFF"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
 
