--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/colorSurface"
         tools:context=".MainActivity">
 
     <!-- Header -->
@@ -15,6 +16,7 @@
             android:layout_height="wrap_content"
             android:text="Choose your game!"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="?attr/colorOnSurface"
             android:textAlignment="center"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +46,7 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="40dp"
                     app:cardElevation="4dp"
                     app:cardCornerRadius="8dp">
 
@@ -53,7 +55,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:padding="16dp">
+                        android:padding="16dp"
+                        >
 
                     <TextView
                             android:text="Add Game"
@@ -87,7 +90,20 @@
             android:contentDescription="Game History"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:backgroundTint="@color/button"
+            app:backgroundTint="@color/primary_color"
+            app:tint="#FFFFFF"/>
+
+    <!-- Theme switch button in left bottom corner -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnThemeSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@drawable/baseline_brightness_4_24"
+            android:contentDescription="Switch Theme"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:backgroundTint="@color/primary_color"
             app:tint="#FFFFFF"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
