--- a/app/src/main/res/layout/activity_edit_session.xml
+++ b/app/src/main/res/layout/activity_edit_session.xml
@@ -138,19 +138,29 @@
                         android:orientation="vertical"
                         android:padding="16dp">
 
-                    <TextView
-                            android:text="Players"
-                            android:textStyle="bold"
-                            android:textSize="16sp"
-                            android:layout_marginBottom="12dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                    <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginBottom="12dp">
 
+                        <TextView
+                                android:text="Players"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                                android:textStyle="bold"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"/>
+                    </LinearLayout>
+
+                    <!-- Container for the list of players -->
                     <LinearLayout
                             android:id="@+id/playersContainer"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical" />
+                            android:orientation="vertical">
+
+                    </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
