--- a/app/src/main/res/layout/game_card_layout.xml
+++ b/app/src/main/res/layout/game_card_layout.xml
@@ -18,7 +18,7 @@
 
         <TextView
                 android:id="@+id/gameNameText"
-                android:text="Nová hra"
+                android:text="@string/new_game"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@android:drawable/ic_media_play"
-                android:contentDescription="Play button"
+                android:contentDescription="@string/play_button"
                 android:scaleType="centerInside"
                 android:padding="8dp"
                 android:background="@color/primary_color"
