--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,25 +10,45 @@
         tools:context=".MainActivity">
 
     <!-- Header -->
-    <TextView
-            android:id="@+id/textViewHeader"
+    <!-- Header -->
+    <LinearLayout
+            android:id="@+id/headerLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Choose your game!"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="?attr/colorOnSurface"
-            android:textAlignment="center"
+            android:orientation="vertical"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+                android:id="@+id/textViewAppName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="?attr/colorPrimary"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:layout_marginBottom="4dp"/>
+
+        <TextView
+                android:id="@+id/textViewHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/choose_your_game"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="?attr/colorOnSurface"
+                android:textAlignment="center"/>
+
+    </LinearLayout>
 
     <!-- ScrollView for all cards -->
     <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewHeader"
+            app:layout_constraintTop_toBottomOf="@id/headerLayout"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -59,7 +79,7 @@
                         >
 
                     <TextView
-                            android:text="Add Game"
+                            android:text="@string/add_game"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textAlignment="center"
@@ -68,7 +88,7 @@
 
                     <Button
                             android:id="@+id/button"
-                            android:text="+"
+                            android:text="@string/plus_symbol"
                             android:textSize="24sp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -86,8 +106,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@android:drawable/ic_menu_recent_history"
-            android:contentDescription="Game History"
+            android:src="@drawable/ic_history"
+            android:contentDescription="@string/history_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:backgroundTint="@color/primary_color"
@@ -99,8 +119,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@drawable/baseline_brightness_4_24"
-            android:contentDescription="Switch Theme"
+            android:src="@drawable/ic_theme_switch"
+            android:contentDescription="@string/theme_switch"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:backgroundTint="@color/primary_color"
