--- a/app/src/main/res/layout/session_history_item.xml
+++ b/app/src/main/res/layout/session_history_item.xml
@@ -6,8 +6,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         app:cardElevation="3dp"
-        app:cardCornerRadius="8dp"
-        app:cardBackgroundColor="?attr/colorSurface">
+        app:cardCornerRadius="8dp">
 
     <LinearLayout
             android:layout_width="match_parent"
